[gd_scene load_steps=6 format=3 uid="uid://b1fp6b5nsr4br"]

[ext_resource type="Script" uid="uid://bvhn3jpnvk52w" path="res://scripts/bomba_de_agua.gd" id="1_fhwoo"]
[ext_resource type="Texture2D" uid="uid://dkonvqosh0t6r" path="res://assets/sprites/bomba de agua.png" id="1_ftpvq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhwoo"]
size = Vector2(10, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_uubxu"]
radius = 8.51469

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jne1g"]
size = Vector2(5, 1)

[node name="bomba_de_agua" type="StaticBody2D"]
z_index = 4
collision_layer = 17
collision_mask = 17
script = ExtResource("1_fhwoo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_fhwoo")

[node name="cadena" type="Line2D" parent="."]
width = 0.5
default_color = Color(0, 0.364706, 0.576471, 1)

[node name="cuerpo" type="Sprite2D" parent="."]
texture = ExtResource("1_ftpvq")
offset = Vector2(3, -1)
region_enabled = true
region_rect = Rect2(6.0661, 0, 26.7735, 31.9041)

[node name="brazo" type="Sprite2D" parent="."]
position = Vector2(-8, -14)
texture = ExtResource("1_ftpvq")
region_enabled = true
region_rect = Rect2(39.0943, 0, 16.0946, 31.7516)

[node name="manija" type="Area2D" parent="brazo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="brazo/manija"]
position = Vector2(-0.5, 8.5)
shape = SubResource("CircleShape2D_uubxu")

[node name="spawn_area" type="Area2D" parent="."]

[node name="spawn_area_collsh" type="CollisionShape2D" parent="spawn_area"]
position = Vector2(11.5, -3.5)
shape = SubResource("RectangleShape2D_jne1g")

[connection signal="input_event" from="brazo/manija" to="." method="_on_manija_input_event"]
